listing block variation

--- a/locales/de/LC_MESSAGES/volto.po
+++ b/locales/de/LC_MESSAGES/volto.po
@@ -24,6 +24,10 @@ msgid "Day"
 msgstr "Tag"
 
 #: components/manage/Blocks/FullCalendar/messages
+msgid "FullCalendar"
+msgstr "Kalender"
+
+#: components/manage/Blocks/FullCalendar/messages
 msgid "Initial view"
 msgstr "Standardansicht"
 
