add title to fullcalendar schema

--- a/locales/de/LC_MESSAGES/volto.po
+++ b/locales/de/LC_MESSAGES/volto.po
@@ -60,6 +60,10 @@ msgid "Previous"
 msgstr "Zurück"
 
 #: components/manage/Blocks/FullCalendar/messages
+msgid "Title"
+msgstr "Titel"
+
+#: components/manage/Blocks/FullCalendar/messages
 msgid "Today"
 msgstr "Heute"
 
